Update Azure login credentials

--- a/.github/workflows/ci-pipeline-irs-ad-demo-dev.yml
+++ b/.github/workflows/ci-pipeline-irs-ad-demo-dev.yml
@@ -85,9 +85,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_28665C5FEC77485EB43CBF3B1CA63A60 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CCA6AAC369974A3A846EC87F4F4EA974 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5D576B5C62854A498D32BCF62A2FF1DF }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
