--- a/.github/workflows/ci-dev-int-irs-ad-demo.yml
+++ b/.github/workflows/ci-dev-int-irs-ad-demo.yml
@@ -10,9 +10,8 @@ env:
   DOTNET_VERSION: '8.x'                           # set this to the .NET Core version to use
 
 on:
-  push:
-    branches:
-      main
+  pull_request:
+    types: Closed
   workflow_dispatch:
 
 permissions:
