--- a/.github/workflows/ci-dev-int-irs-ad-demo.yml
+++ b/.github/workflows/ci-dev-int-irs-ad-demo.yml
@@ -2,7 +2,7 @@
 # This workflow will build and push a .NET Core app to an Azure Web App when a commit is pushed to your default branch.
 #
 
-name: Build and Deploy - wa-irs-ad-demo-dev-test/dev-int and production
+name: CI Build and Deploy - wa-irs-ad-demo-dev-test/dev-int and production
 env:
   AZURE_WEBAPP_NAME: 'wa-irs-ad-demo-dev-test'    # set this to the name of your Azure Web App
   AZURE_WEBAPP_SLOT_NAME: dev-int                 # set this to the name of the Azure Web App deployment slot
