--- a/.github/workflows/ci-dev-lxb-irs-ad-demo.yml
+++ b/.github/workflows/ci-dev-lxb-irs-ad-demo.yml
@@ -5,7 +5,7 @@
 # This workflow will build and push a .NET Core app to an Azure Web App when a commit is pushed to your default branch.
 #
 
-name: Build and Deploy to Azure Web App - wa-irs-ad-demo-dev-test/dev-lxb
+name: CI Build and Deploy - wa-irs-ad-demo-dev-test/dev-lxb
 env:
   AZURE_WEBAPP_NAME: 'wa-irs-ad-demo-dev-test'    # set this to the name of your Azure Web App
   AZURE_WEBAPP_SLOT_NAME: dev-lxb                 # set this to the name of the Azure Web App deployment slot
