--- a/.github/workflows/ci-dev-int-irs-ad-demo.yml
+++ b/.github/workflows/ci-dev-int-irs-ad-demo.yml
@@ -50,14 +50,14 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy-to-dev-int:
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Development'
+      name: 'Development Integration'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -81,6 +81,29 @@ jobs:
           slot-name: ${{ env.AZURE_WEBAPP_SLOT_NAME }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
+  deploy-to-prod:
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Test'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
       - name: Deploy to Azure Web App - test
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
