--- a/.github/workflows/ci-dev-int-irs-ad-demo.yml
+++ b/.github/workflows/ci-dev-int-irs-ad-demo.yml
@@ -81,11 +81,10 @@ jobs:
           slot-name: ${{ env.AZURE_WEBAPP_SLOT_NAME }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-      - name: Deploy to Azure Web App - dev-int
+      - name: Deploy to Azure Web App - prod
         id: deploy-to-webapp-prod
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          slot-name: ${{ env.AZURE_WEBAPP_SLOT_NAME }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
       
